2006-09-22  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc.erl: Component name is now more user friendly
	(thanks to Badlop).
	* src/mod_irc/mod_irc.erl: Likewise.
	* src/mod_pubsub/mod_pubsub.erl: Likewise. 

	* src/msgs/fr.msg: updated French translation.
	
	* doc/guide.tex: Large improvements for ejabberd 1.1.2 (thanks to
	Sander Devrieze)
	* doc/version.tex: Likewise.
	* doc/features.tex: Likewise.
	* doc/Makefile: Likewise.
	* doc/dev.tex: Likewise.
	
2006-09-14  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Minor fix on index generation.

2006-09-14  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Updated (thanks to Evgeniy Khramtsov)

	* src/ejabberd_auth_ldap.erl: Better LDAP support (thanks to
	Evgeniy Khramtsov)
	* src/mod_vcard_ldap.erl: Likewise
	* src/eldap/eldap_filter.erl: Likewise

2006-09-11  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/mssql.sql: Removed unused fields.

2006-09-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejd2odbc.erl: Updated

	* src/mod_muc/mod_muc_log.erl: Fixed html special characters
	escaping, added new image buttons, chatroom titles now point to
	xmpp: URIs (thanks to Badlop)

	* src/ejabberd_listener.erl: Bugfix

2006-09-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_muc/mod_muc.erl: It is now possible to configure the MUC room
	history feature. A new option has been added in ejabberd muc module
	configuration (history_size) to define the size of the history. 0 is
        used to disable the feature.
	* src/mod_muc/mod_muc_room.erl: Likewise.
	* doc/guide.tex: Likewise.

2006-09-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_socket.erl: All XML socket operations moved here
	* src/ejabberd_listener.erl: Updated
	* src/ejabberd_receiver.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd_service.erl: Likewise
