@@ -1,3 +1,14 @@
+2006-09-23  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/eldap/eldap.erl: Enable the keepalive socket option (thanks
+	to Evgeniy Khramtsov)
+
+	* src/ejabberd_auth_ldap.erl: Now uses two LDAP connections
+	(thanks to Evgeniy Khramtsov)
+
+	* src/eldap/eldap_filter.erl: Bugfix (thanks to Evgeniy Khramtsov)
+	* src/mod_vcard_ldap.erl: Likewise
+
 2006-09-22  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/mod_muc/mod_muc.erl: Component name is now more user friendly
